# dinx-backend

./: .gitignore  justfile  main.py  pyproject.toml
.claude/: CLAUDE.md
.envs/.local/: .postgres
compose/fastapi/: dockerfile
compose/local/: local.yml
compose/local/fastapi/: dockerfile
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/app/auth/: helper.py  models.py  router.py  schemas.py  services.py
src/app/auth/utils/: consts.py  deps.py  helper.py
src/app/budgets/: models.py  schemas.py
src/app/expenses/: models.py
src/config/: db.py  lifespan.py  models.py  settings.py
src/tests/: conftest.py
src/tests/auth/: test_auth.py
