[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "scalar-fastapi>=1.8.0",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "typing>=3.10.0.0",
    "uvicorn>=0.42.0",
]
